--- a/translations/ar.json
+++ b/translations/ar.json
@@ -117,6 +117,15 @@
     "formName": "الاسم الكامل",
     "formEmail": "عنوان البريد الإلكتروني",
     "formMessage": "رسالة",
-    "formSubmit": "إرسال رسالة"
+    "formSubmit": "إرسال رسالة",
+    "sourcesPageTitle": "مصادر المعلومات - TravelHawk",
+  "sourcesTitle": "مصادر المعلومات",
+  "sourcesIntro": "الشفافية والدقة هما جوهر مهمتنا في TravelHawk. توفر هذه الصفحة قائمة شاملة بالمصادر الحكومية الرسمية والمتاحة للجمهور المستخدمة لتوفير البيانات داخل التطبيق.",
+  "sourcesDisclaimerTitle": "إخلاء مسؤولية مهم",
+  "sourcesDisclaimerText": "TravelHawk هو <strong>تطبيق مستقل</strong> و<strong>لا يمثل أي جهة حكومية</strong>. هذا التطبيق غير تابع أو معتمد أو متصل رسميًا بحكومة جنوب إفريقيا أو خدمة شرطة جنوب إفريقيا (SAPS) أو أي حكومة أجنبية. يتم تجميع جميع البيانات من المصادر المذكورة أدناه لأغراض إعلامية فقط. بينما نسعى جاهدين لتحقيق الدقة، فإننا لا ندعي الملكية أو نضمن صحة البيانات، لأنها تعتمد على الإصدارات العامة الأصلية.",
+  "sourcesCrimeStats": "إحصائيات الجريمة",
+  "sourcesEmergencyNumbers": "أرقام الطوارئ",
+  "sourcesEmbassies": "معلومات السفارات والقنصليات",
+  "footerSources": "مصادر البيانات"
 }
 
