--- a/translations/hi.json
+++ b/translations/hi.json
@@ -116,5 +116,14 @@
     "formName": "पूरा नाम",
     "formEmail": "ईमेल पता",
     "formMessage": "संदेश",
-    "formSubmit": "संदेश भेजें"
+    "formSubmit": "संदेश भेजें",
+    "sourcesPageTitle": "सूचना के स्रोत - TravelHawk",
+  "sourcesTitle": "सूचना के स्रोत",
+  "sourcesIntro": "पारदर्शिता और सटीकता TravelHawk में हमारे मिशन का मूल है। यह पृष्ठ एप्लिकेशन के भीतर डेटा प्रदान करने के लिए उपयोग किए जाने वाले आधिकारिक, सार्वजनिक रूप से उपलब्ध सरकारी स्रोतों की एक विस्तृत सूची प्रदान करता है।",
+  "sourcesDisclaimerTitle": "महत्वपूर्ण अस्वीकरण",
+  "sourcesDisclaimerText": "TravelHawk एक <strong>स्वतंत्र एप्लिकेशन</strong> है और <strong>किसी भी सरकारी संस्था का प्रतिनिधित्व नहीं करता है</strong>। यह ऐप दक्षिण अफ़्रीकी सरकार, दक्षिण अफ़्रीकी पुलिस सेवा (SAPS), या किसी विदेशी सरकार से संबद्ध, समर्थित या आधिकारिक रूप से जुड़ा नहीं है। सभी डेटा केवल सूचनात्मक उद्देश्यों के लिए नीचे सूचीबद्ध स्रोतों से एकत्र किए गए हैं। जबकि हम सटीकता के लिए प्रयास करते हैं, हम डेटा के स्वामित्व का दावा नहीं करते हैं या उसकी शुद्धता की गारंटी नहीं देते हैं, क्योंकि यह मूल सार्वजनिक रिलीज पर निर्भर करता है।",
+  "sourcesCrimeStats": "अपराध के आँकड़े",
+  "sourcesEmergencyNumbers": "आपातकालीन नंबर",
+  "sourcesEmbassies": "दूतावास और वाणिज्य दूतावास की जानकारी",
+  "footerSources": "डेटा स्रोत"
 }
