--- a/translations/ru.json
+++ b/translations/ru.json
@@ -116,5 +116,14 @@
     "formName": "Полное имя",
     "formEmail": "Адрес электронной почты",
     "formMessage": "Сообщение",
-    "formSubmit": "Отправить сообщение"
+    "formSubmit": "Отправить сообщение",
+    "sourcesPageTitle": "Источники информации - TravelHawk",
+  "sourcesTitle": "Источники информации",
+  "sourcesIntro": "Прозрачность и точность являются основой нашей миссии в TravelHawk. На этой странице представлен полный список официальных, общедоступных правительственных источников, используемых для предоставления данных в приложении.",
+  "sourcesDisclaimerTitle": "Важное заявление об отказе от ответственности",
+  "sourcesDisclaimerText": "TravelHawk — это <strong>независимое приложение</strong>, которое <strong>НЕ представляет никакое правительственное учреждение</strong>. Это приложение не связано, не одобрено и не имеет официальных связей с правительством Южной Африки, Полицейской службой Южной Африки (SAPS) или любым иностранным правительством. Все данные собираются из перечисленных ниже источников исключительно в информационных целях. Хотя мы стремимся к точности, мы не претендуем на право собственности и не гарантируем правильность данных, поскольку это зависит от оригинальных публичных выпусков.",
+  "sourcesCrimeStats": "Статистика преступности",
+  "sourcesEmergencyNumbers": "Экстренные номера",
+  "sourcesEmbassies": "Информация о посольствах и консульствах",
+  "footerSources": "Источники данных"
 }
