--- a/translations/th.json
+++ b/translations/th.json
@@ -116,5 +116,14 @@
     "formName": "ชื่อเต็ม",
     "formEmail": "ที่อยู่อีเมล",
     "formMessage": "ข้อความ",
-    "formSubmit": "ส่งข้อความ"
+    "formSubmit": "ส่งข้อความ",
+    "sourcesPageTitle": "แหล่งข้อมูล - TravelHawk",
+  "sourcesTitle": "แหล่งข้อมูล",
+  "sourcesIntro": "ความโปร่งใสและความถูกต้องเป็นหัวใจสำคัญของภารกิจของเราที่ TravelHawk หน้านี้ให้รายชื่อแหล่งข้อมูลของรัฐบาลที่เป็นทางการและเปิดเผยต่อสาธารณะทั้งหมดที่ใช้ในการให้ข้อมูลภายในแอปพลิเคชัน",
+  "sourcesDisclaimerTitle": "ข้อจำกัดความรับผิดชอบที่สำคัญ",
+  "sourcesDisclaimerText": "TravelHawk เป็น<strong>แอปพลิเคชันอิสระ</strong>และ<strong>ไม่ได้เป็นตัวแทนของหน่วยงานรัฐบาลใดๆ</strong> แอปนี้ไม่มีส่วนเกี่ยวข้อง รับรอง หรือเชื่อมต่ออย่างเป็นทางการกับรัฐบาลแอฟริกาใต้, ตำรวจแอฟริกาใต้ (SAPS) หรือรัฐบาลต่างประเทศใดๆ ข้อมูลทั้งหมดรวบรวมจากแหล่งที่มาด้านล่างเพื่อวัตถุประสงค์ในการให้ข้อมูลเท่านั้น ในขณะที่เรามุ่งมั่นเพื่อความถูกต้อง เราไม่ได้อ้างสิทธิ์ความเป็นเจ้าของหรือรับประกันความถูกต้องของข้อมูล เนื่องจากขึ้นอยู่กับการเปิดเผยข้อมูลสาธารณะต้นฉบับ",
+  "sourcesCrimeStats": "สถิติอาชญากรรม",
+  "sourcesEmergencyNumbers": "หมายเลขฉุกเฉิน",
+  "sourcesEmbassies": "ข้อมูลสถานทูตและสถานกงสุล",
+  "footerSources": "แหล่งข้อมูล"
 }
