New video player

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -126,6 +126,7 @@
   "sourcesCrimeStats": "إحصائيات الجريمة",
   "sourcesEmergencyNumbers": "أرقام الطوارئ",
   "sourcesEmbassies": "معلومات السفارات والقنصليات",
-  "footerSources": "مصادر البيانات"
+  "footerSources": "مصادر البيانات",
+  "watchVideo": "شاهد الفيديو"
 }
 
