--- a/translations/en.json
+++ b/translations/en.json
@@ -126,6 +126,7 @@
   "sourcesCrimeStats": "Crime Statistics",
   "sourcesEmergencyNumbers": "Emergency Numbers",
   "sourcesEmbassies": "Embassy & Consulate Information",
-  "footerSources": "Data Sources"
+  "footerSources": "Data Sources",
+  "watchVideo": "Watch Video"
 }
 
